# flutter_inactive_timer

./: .codeignore  .gitignore  .metadata  .pubignore  CHANGELOG.md  CLAUDE.md  CODE.md  CONTEXT.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml
docs/adr/: 0001-idle-duration-channel-contract.md  0002-notification-trigger-and-duration.md  0003-remaining-time-pull-api.md  0004-idle-duration-over-ffi.md  0005-pure-dart-package.md
docs/agents/: lessons.md  theflow.md
example/: README.md  pubspec.yaml
example/integration_test/: idle_parity_test.dart  idle_source_test.dart  plugin_integration_test.dart
example/lib/: idle_parity_demo.dart  idle_source_demo.dart  main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
example_cli/: pubspec.yaml
lib/: flutter_inactive_timer.dart  flutter_inactive_timer_ffi.dart  flutter_inactive_timer_method_channel.dart  flutter_inactive_timer_platform_interface.dart
lib/src/: inactivity_policy.dart  notification_trigger.dart
lib/src/ffi/: idle_source.dart  idle_sources.dart  macos_core_graphics_idle_source.dart  macos_iokit_idle_source.dart  windows_idle_source.dart
macos/: flutter_inactive_timer.podspec
macos/Classes/: FlutterInactiveTimerPlugin.swift
test/: ffi_idle_source_test.dart  flutter_inactive_timer_method_channel_test.dart  flutter_inactive_timer_test.dart  ghost_timer_test.dart  inactivity_policy_test.dart  macos_core_graphics_idle_source_test.dart  macos_iokit_idle_source_test.dart  windows_idle_source_test.dart
windows/: CMakeLists.txt  flutter_inactive_timer_plugin.cpp  flutter_inactive_timer_plugin.h  flutter_inactive_timer_plugin_c_api.cpp
windows/include/flutter_inactive_timer/: flutter_inactive_timer_plugin_c_api.h
windows/test/: CMakeLists.txt  flutter_inactive_timer_plugin_test.cpp
